[gd_scene load_steps=5 format=3 uid="uid://cmdm787ctiw1d"]

[ext_resource type="Script" path="res://Scenes/GameOverMenu/game_over_menu.gd" id="1_8c2n7"]
[ext_resource type="FontFile" uid="uid://qaii6ad4ufsw" path="res://Font/GloriaHallelujah-Regular.ttf" id="1_c0ooi"]
[ext_resource type="PackedScene" uid="uid://o7nj734q43mp" path="res://Scenes/GameOverMenu/ScoreInfoUI.tscn" id="2_pnkjw"]

[sub_resource type="LabelSettings" id="LabelSettings_ejq6x"]
font = ExtResource("1_c0ooi")
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8c2n7")

[node name="RetryButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_top = 0.696
anchor_right = 0.505
anchor_bottom = 0.696
offset_left = -26.295
offset_top = 11.5931
offset_right = 23.705
offset_bottom = 42.5931
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.79, 1.79)
pivot_offset = Vector2(24.7, 14.685)
text = "Retry"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_top = 0.812
anchor_right = 0.505
anchor_bottom = 0.812
offset_left = -26.295
offset_top = 11.5931
offset_right = 23.705
offset_bottom = 42.5931
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.79, 1.79)
pivot_offset = Vector2(24.7, 14.685)
text = "Quit
"

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.203
anchor_right = 0.5
anchor_bottom = 0.203
offset_left = -173.0
offset_top = -75.5
offset_right = 173.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
text = "Run Over!"
label_settings = SubResource("LabelSettings_ejq6x")

[node name="ScoreInfoUI" parent="." instance=ExtResource("2_pnkjw")]
layout_mode = 1
